// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeTable decorator should render correctly - with data 1`] = `
<div
  className="pf-v5-c-treeview__control"
>
  <div
    className="pf-v5-c-treeview__control-text"
  >
    value
  </div>
</div>
`;

exports[`TreeTable decorator should render correctly - with data tree collapsed 1`] = `
<div
  className="pf-v5-c-treeview__control"
>
  <div
    className="pf-v5-c-treeview__toggle"
  >
    <Button
      onClick={[Function]}
      variant="plain"
    >
      <AngleRightIcon
        aria-hidden="true"
        className="pf-v5-c-treeview__toggle-icon"
      />
    </Button>
  </div>
  <div
    className="pf-v5-c-treeview__control-text"
  >
    value
  </div>
</div>
`;

exports[`TreeTable decorator should render correctly - with data tree opened 1`] = `
<div
  className="pf-v5-c-treeview__control"
>
  <div
    className="pf-v5-c-treeview__toggle"
  >
    <Button
      onClick={[Function]}
      variant="plain"
    >
      <AngleRightIcon
        aria-hidden="true"
        className="pf-v5-c-treeview__toggle-icon"
      />
    </Button>
  </div>
  <div
    className="pf-v5-c-treeview__control-text"
  >
    value
  </div>
</div>
`;
